# budgie-calendar-applet

./: Makefile.am  README.md  autogen.sh  common.mk  configure.ac  meson.build  uncrustify.cfg
.tx/: config
budgie-calendar-applet/: CalendarApplet.plugin  CalendarApplet.plugin.in  CalendarApplet.vala  Makefile.am
build-aux/meson/: postinstall.py
data/: CalendarApplet.plugin  com.github.danielpinto8zz6.budgie-calendar-applet.appdata.xml  com.github.danielpinto8zz6.budgie-calendar-applet.appdata.xml.in  com.github.danielpinto8zz6.budgie-calendar-applet.gschema.xml  com.github.danielpinto8zz6.budgie-calendar-applet.plugin.in  meson.build
po/: LINGUAS  POTFILES.in  POTFILES.skip  ca.po  com.github.danielpinto8zz6.budgie-calendar-applet.pot  de.po  el_GR.po  es.po  fr.po  ga.po  it.po  lt.po  meson.build  nl_NL.po  pt_PT.po  ru.po  sq.po  tr.po  uk.po  update_linguas.sh
src/: Applet.vala  AppletSettings.vala  CalendarApplet.vala  CalendarAppletSettings.vala  config.vala.in  meson.build
vapi/: config.vapi
